# Classify-Song-Genres-from-Audio-Data-project

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  CI_CD_SETUP.md  README.md  README_PROJECT_SUMMARY.md  Song Genre Classification project.ipynb  Song Genre Classification project.py  cli.py  config.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  song_genre_classifier.py  test_song_classifier.py  ws.ipynb
.github/workflows/: precommits-pylint-pytest.yaml
data/: fma-rock-vs-hiphop.csv
scripts/: setup_dev.py
src/: cli.py  config.py  song_genre_classifier.py
src/data_processing/: dataframe_preprocessing.py  datframe_manipulation.py
src/models/: model.py
test/: conftest.py  test_song_classifier.py
