[project]
name = "classify-song-genres-from-audio-data-project"
version = "0.1.0"
description = "XGBoost classifier environment"
authors = [
    {name = "ioki",email = "qmichel05@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "xgboost (>=3.0.5,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
